[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py4D_browser"
version = "0.99"
authors = [
  { name="Steven Zeltmann", email="steven.zeltmann@berkeley.edu" },
]
description = "A 4D-STEM data browser built on py4DSTEM."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "py4dstem >= 0.14.0",
  "numpy >= 1.19",
  "matplotlib >= 3.2.2",
  "PyQt5 >= 5.10",
  "pyqtgraph >= 0.11",
]

[project.scripts]
py4DGUI = "py4D_browser.runGUI:launch"

[project.urls]
"Homepage" = "https://github.com/py4dstem/py4D-browser"
"Bug Tracker" = "https://github.com/py4dstem/py4D-browser/issues"